<resources>
    <string name="app_name">OmelaWorkers</string>
    <string name="log_in">войти</string>
    <string name="login">вход</string>
    <string name="password">пароль</string>
    <string name="empty">" "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="omela">omela</string>
    <string name="orders">заказы</string>
    <string name="new_order">НОВЫЙ ЗАКАЗ</string>
    <string name="time">11:35</string>
    <string name="phone_number">+996 000 123 456</string>
    <string name="address_with_column">Адрес:</string>
    <string name="branch_with_column">Филиал:</string>
    <string name="address_hint">проспект Чингиза Айтматова 305, дом 45, кв. 45</string>
    <string name="branch">проспект чуй 147/1.</string>
    <string name="accepted">принял</string>
    <string name="picked_up">забрал</string>
    <string name="omw">в пути</string>
    <string name="delivered">доставил</string>
    <string name="finished">завершил</string>
    <string name="order_info">информация о заказе</string>
    <string name="name_hint">Каныкей Майрамбекова</string>
    <string name="number_hint">+996 123 456 789</string>
    <string name="log_out">выйти</string>
    <string name="salary">зарплата</string>
    <string name="branches_of_the_shop">филиалы магазинов</string>
    <string name="branch1_address">Байтик Батыра 49, 1 этаж.</string>
    <string name="branch2_address">Манаса 47, 2 этаж.</string>
    <string name="branch3_address">проспект чуй 147/1, 1 этаж.</string>
    <string name="branch4_address">Юнусалиева 160/1, 2 этаж.</string>
    <string name="this_month">за текущий месяц</string>
    <string name="sort">фильтр</string>
    <string name="add_flower">добавить букет</string>
    <string name="add_photo">добавить фото</string>
    <string name="name">название</string>
    <string name="price">цена</string>
    <string name="save">сохранить</string>
    <string name="bouquet_content">состав букета</string>
    <string name="bouquet_description">описание букета</string>
    <string name="bouquet_discount">скидка букета</string>
    <string name="bouquet_height">высота букета</string>
    <string name="bouquet_diameter">диаметр букета</string>
    <string name="bouquet_price">цена букета</string>
    <string name="bouquet_name">название букета</string>
    <string name="description">описание</string>
    <string name="discount">скидка</string>
    <string name="content">состав</string>
    <string name="height">высота</string>
    <string name="diameter">диаметр</string>
    <string name="new_orders">новые заказы</string>
</resources>